tests/invalid/LogicalNot_Invalid_2.whiley
public export method test():
    assume ![false][0]